@@ -1,3 +1,4 @@
+	* add trackers from add_torrent_params/magnet links to separate tiers
 	* fix resumedata check issue with files with priority 0
 	* deprecated mmap_cache feature
 	* add utility function for generating peer ID fingerprint
